[project]
name = "pause_to_mask"
description = "Use to create masks in the middle of a workflow for image generation and inpainting in a single execution. Supports export to Krita and fetching once finished. This is a modified version of https://github.com/Cordux/ComfyUI-ImagePreviewPause"
version = "1.0.0"
license = { file = "LICENSE" }
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/igoon4jesus/pause_to_mask"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/igoon4jesus/pause_to_mask/wiki"
"Bug Tracker" = "https://github.com/igoon4jesus/pause_to_mask/issues"

[tool.comfy]
PublisherId = "igoon4jesus"
DisplayName = "pause_to_mask"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

